force-app/main/default/objects/MessagingSession/fields/city__c.field-meta.xml
<CustomField>
    <fullName>city__c</fullName>
    <label>city</label>
    <length>70</length>
    <type>Text</type>
</CustomField>