force-app/main/default/objects/MessagingSession/fields/latitude__c.field-meta.xml
<CustomField>
    <fullName>latitude__c</fullName>
    <description>Stores the latitude coming from site</description>
    <label>latitude</label>
    <length>80</length>
    <type>Text</type>
</CustomField>