force-app/main/default/objects/MessagingSession/fields/longitude__c.field-meta.xml
<CustomField>
    <fullName>longitude__c</fullName>
    <label>longitude</label>
    <length>80</length>
    <type>Text</type>
</CustomField>