force-app/main/default/objects/MessagingSession/fields/Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Model__c</fullName>
    <label>Vehicle_Model</label>
    <length>20</length>
    <type>Text</type>
</CustomField>