force-app/main/default/objects/MessagingSession/fields/zip__c.field-meta.xml
<CustomField>
    <fullName>zip__c</fullName>
    <label>zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>